import UI.UserUI;

import java.util.Scanner;

public class Engine {
    private static Scanner scanner = new Scanner(System.in);
    public static void main(String[] args){
        UserUI.getUser();
    }

}
