package ViewsAndTimelines;

public class DayView extends TimelineView {
    public void display(){
        // assume print stuff about campaign
        System.out.println("This is a campaign, day view");
    }
}
