package ViewsAndTimelines;

public class MonthView extends TimelineView{
    public void display(){
        // assume print stuff about campaign
        System.out.println("This is a campaign, month view");
    }
}
